--- a/EquityReturns.ipynb
+++ b/EquityReturns.ipynb
@@ -10,7 +10,6 @@
     "import numpy as np\n",
     "import quantstats as qs\n",
     "import matplotlib.pyplot as plt\n",
-    "import csv\n",
     "import yfinance as yf\n",
     "from yahoofinancials import YahooFinancials"
    ]
@@ -177,6 +176,11 @@
     "print('Total Return:', total_return, '%')\n",
     "print('Sharpe Ratio:', sharpe)\n",
     "print('Sortino Ratio:', sortino)"
+   ]
+   "source": [
+    "# plot returns on graph\n",
+    "\n",
+    "data.plot(kind = 'line', y = 3, title = 'Returns', figsize = (20,10))",
    ]
   }
  ],
